--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1> {{titulo}} </h1>
 <input #tarefa (keyup.enter)="getTarefa(tarefa.value)">
 <button (click)="getTarefa(tarefa.value)">Salvar</button>
+<ul>
+    <li *ngFor="let item of todoList">
+    {{ item.title}}
+    </li>
+</ul>
